Working version/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     object_creation -> NAME ASSIGNOP NAME DEREF NEW PARANTHESIS_L arg_list PARANTHESIS_R SEMI
Rule 2     print_st -> PRINT arg_list SEMI
Rule 3     constructor -> SUB NEW braces_left constructor_body braces_right
Rule 4     arg_list -> arg
Rule 5     arg_list -> arg_list COMMA arg
Rule 6     obj_func_call -> NAME DEREF NAME PARANTHESIS_L arg_list PARANTHESIS_R SEMI
Rule 7     constructor_body -> statement constructor_hash bless_st return_constructor
Rule 8     arg -> term
Rule 9     arg -> empty
Rule 10    constructor_hash -> my NAME ASSIGNOP BRACES_LEFT hash_statement_list BRACES_RIGHT SEMI
Rule 11    start -> not_package
Rule 12    start -> package
Rule 13    hash_statement_list -> hash_statement
Rule 14    hash_statement_list -> hash_statement_list COMMA hash_statement
Rule 15    not_package -> body
Rule 16    hash_statement -> NAME HASH_OP SHIFT
Rule 17    hash_statement -> NAME HASH_OP term
Rule 18    var_deref -> NAME DEREF BRACES_LEFT NAME BRACES_RIGHT
Rule 19    body -> statement_list
Rule 20    body -> empty
Rule 21    statement_list -> statement
Rule 22    statement_list -> statement_list statement
Rule 23    bless_st -> BLESS PARANTHESIS_L NAME COMMA NAME PARANTHESIS_R SEMI
Rule 24    my -> MY
Rule 25    my -> empty
Rule 26    return_constructor -> RETURN NAME SEMI
Rule 27    termbinop -> term POWOP term
Rule 28    termbinop -> term MULOP term
Rule 29    termbinop -> term ADDOP term
Rule 30    termbinop -> term SHIFTOP term
Rule 31    termbinop -> term RELOP term
Rule 32    termbinop -> term EQOP term
Rule 33    termbinop -> term BITANDOP term
Rule 34    termbinop -> term BITOROP term
Rule 35    termbinop -> term DOTDOT term
Rule 36    termbinop -> term ANDAND term
Rule 37    termbinop -> term OROR term
Rule 38    termbinop -> term DORDOR term
Rule 39    termbinop -> term MATCHOP term
Rule 40    termbinop -> term WAND term
Rule 41    termbinop -> term WOR term
Rule 42    termbinop -> term WXOR term
Rule 43    block -> braces_left body braces_right
Rule 44    braces_left -> BRACES_LEFT
Rule 45    braces_right -> BRACES_RIGHT
Rule 46    statement -> var_dec
Rule 47    statement -> function_dec
Rule 48    statement -> constructor
Rule 49    statement -> object_creation
Rule 50    statement -> obj_func_call
Rule 51    statement -> print_st
Rule 52    statement -> use_st
Rule 53    statement -> comment
Rule 54    package -> package_dec body
Rule 55    package_dec -> PACKAGE NAME SEMI
Rule 56    use_st -> USE NAME SEMI
Rule 57    function_dec -> SUB NAME block
Rule 58    var_dec -> my NAME ASSIGNOP SHIFT SEMI
Rule 59    var_dec -> my NAME ASSIGNOP term SEMI
Rule 60    empty -> <empty>
Rule 61    comment -> COMMENT
Rule 62    termunop -> ADDOP term
Rule 63    termunop -> ! term
Rule 64    termunop -> ~ term
Rule 65    termunop -> term INCREMENT
Rule 66    termunop -> term DECREMENT
Rule 67    termunop -> term DEREF
Rule 68    termunop -> INCREMENT term
Rule 69    termunop -> DECREMENT term
Rule 70    termunop -> WNOT term
Rule 71    term -> termbinop
Rule 72    term -> termunop
Rule 73    term -> PARANTHESIS_L term PARANTHESIS_R
Rule 74    term -> NAME
Rule 75    term -> NUMBER
Rule 76    term -> STRING
Rule 77    term -> var_deref
Rule 78    term -> Q BRACES_LEFT NAME BRACES_RIGHT
Rule 79    term -> QQ BRACES_LEFT NAME BRACES_RIGHT
Rule 80    term -> QX BRACES_LEFT NAME BRACES_RIGHT

Terminals, with rules where they appear

!                    : 63
ADDOP                : 29 62
ANDAND               : 36
ASSIGNOP             : 1 10 58 59
BITANDOP             : 33
BITOROP              : 34
BLESS                : 23
BRACES_LEFT          : 10 18 44 78 79 80
BRACES_RIGHT         : 10 18 45 78 79 80
COMMA                : 5 14 23
COMMENT              : 61
DECREMENT            : 66 69
DEREF                : 1 6 18 67
DORDOR               : 38
DOTDOT               : 35
EQOP                 : 32
HASH_OP              : 16 17
INCREMENT            : 65 68
MATCHOP              : 39
MULOP                : 28
MY                   : 24
NAME                 : 1 1 6 6 10 16 17 18 18 23 23 26 55 56 57 58 59 74 78 79 80
NEW                  : 1 3
NUMBER               : 75
OROR                 : 37
PACKAGE              : 55
PARANTHESIS_L        : 1 6 23 73
PARANTHESIS_R        : 1 6 23 73
POWOP                : 27
PRINT                : 2
Q                    : 78
QQ                   : 79
QX                   : 80
RELOP                : 31
RETURN               : 26
SEMI                 : 1 2 6 10 23 26 55 56 58 59
SHIFT                : 16 58
SHIFTOP              : 30
STRING               : 76
SUB                  : 3 57
USE                  : 56
WAND                 : 40
WNOT                 : 70
WOR                  : 41
WXOR                 : 42
error                : 
~                    : 64

Nonterminals, with rules where they appear

arg                  : 4 5
arg_list             : 1 2 5 6
bless_st             : 7
block                : 57
body                 : 15 43 54
braces_left          : 3 43
braces_right         : 3 43
comment              : 53
constructor          : 48
constructor_body     : 3
constructor_hash     : 7
empty                : 9 20 25
function_dec         : 47
hash_statement       : 13 14
hash_statement_list  : 10 14
my                   : 10 58 59
not_package          : 11
obj_func_call        : 50
object_creation      : 49
package              : 12
package_dec          : 54
print_st             : 51
return_constructor   : 7
start                : 0
statement            : 7 21 22
statement_list       : 19 22
term                 : 8 17 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 59 62 63 64 65 66 67 68 69 70 73
termbinop            : 71
termunop             : 72
use_st               : 52
var_dec              : 46
var_deref            : 77

Parsing method: LALR

state 0

    (0) S' -> . start
    (11) start -> . not_package
    (12) start -> . package
    (15) not_package -> . body
    (54) package -> . package_dec body
    (19) body -> . statement_list
    (20) body -> . empty
    (55) package_dec -> . PACKAGE NAME SEMI
    (21) statement_list -> . statement
    (22) statement_list -> . statement_list statement
    (60) empty -> .
    (46) statement -> . var_dec
    (47) statement -> . function_dec
    (48) statement -> . constructor
    (49) statement -> . object_creation
    (50) statement -> . obj_func_call
    (51) statement -> . print_st
    (52) statement -> . use_st
    (53) statement -> . comment
    (58) var_dec -> . my NAME ASSIGNOP SHIFT SEMI
    (59) var_dec -> . my NAME ASSIGNOP term SEMI
    (57) function_dec -> . SUB NAME block
    (3) constructor -> . SUB NEW braces_left constructor_body braces_right
    (1) object_creation -> . NAME ASSIGNOP NAME DEREF NEW PARANTHESIS_L arg_list PARANTHESIS_R SEMI
    (6) obj_func_call -> . NAME DEREF NAME PARANTHESIS_L arg_list PARANTHESIS_R SEMI
    (2) print_st -> . PRINT arg_list SEMI
    (56) use_st -> . USE NAME SEMI
    (61) comment -> . COMMENT
    (24) my -> . MY
    (25) my -> . empty

  ! shift/reduce conflict for NAME resolved as shift
    PACKAGE         shift and go to state 8
    $end            reduce using rule 60 (empty -> .)
    SUB             shift and go to state 20
    NAME            shift and go to state 9
    PRINT           shift and go to state 21
    USE             shift and go to state 22
    COMMENT         shift and go to state 23
    MY              shift and go to state 24

  ! NAME            [ reduce using rule 60 (empty -> .) ]

    start                          shift and go to state 1
    not_package                    shift and go to state 2
    package                        shift and go to state 3
    body                           shift and go to state 4
    package_dec                    shift and go to state 5
    statement_list                 shift and go to state 6
    empty                          shift and go to state 7
    statement                      shift and go to state 10
    var_dec                        shift and go to state 11
    function_dec                   shift and go to state 12
    constructor                    shift and go to state 13
    object_creation                shift and go to state 14
    obj_func_call                  shift and go to state 15
    print_st                       shift and go to state 16
    use_st                         shift and go to state 17
    comment                        shift and go to state 18
    my                             shift and go to state 19

state 1

    (0) S' -> start .



state 2

    (11) start -> not_package .

    $end            reduce using rule 11 (start -> not_package .)


state 3

    (12) start -> package .

    $end            reduce using rule 12 (start -> package .)


state 4

    (15) not_package -> body .

    $end            reduce using rule 15 (not_package -> body .)


state 5

    (54) package -> package_dec . body
    (19) body -> . statement_list
    (20) body -> . empty
    (21) statement_list -> . statement
    (22) statement_list -> . statement_list statement
    (60) empty -> .
    (46) statement -> . var_dec
    (47) statement -> . function_dec
    (48) statement -> . constructor
    (49) statement -> . object_creation
    (50) statement -> . obj_func_call
    (51) statement -> . print_st
    (52) statement -> . use_st
    (53) statement -> . comment
    (58) var_dec -> . my NAME ASSIGNOP SHIFT SEMI
    (59) var_dec -> . my NAME ASSIGNOP term SEMI
    (57) function_dec -> . SUB NAME block
    (3) constructor -> . SUB NEW braces_left constructor_body braces_right
    (1) object_creation -> . NAME ASSIGNOP NAME DEREF NEW PARANTHESIS_L arg_list PARANTHESIS_R SEMI
    (6) obj_func_call -> . NAME DEREF NAME PARANTHESIS_L arg_list PARANTHESIS_R SEMI
    (2) print_st -> . PRINT arg_list SEMI
    (56) use_st -> . USE NAME SEMI
    (61) comment -> . COMMENT
    (24) my -> . MY
    (25) my -> . empty

  ! shift/reduce conflict for NAME resolved as shift
    $end            reduce using rule 60 (empty -> .)
    SUB             shift and go to state 20
    NAME            shift and go to state 9
    PRINT           shift and go to state 21
    USE             shift and go to state 22
    COMMENT         shift and go to state 23
    MY              shift and go to state 24

  ! NAME            [ reduce using rule 60 (empty -> .) ]

    body                           shift and go to state 25
    statement_list                 shift and go to state 6
    empty                          shift and go to state 7
    statement                      shift and go to state 10
    var_dec                        shift and go to state 11
    function_dec                   shift and go to state 12
    constructor                    shift and go to state 13
    object_creation                shift and go to state 14
    obj_func_call                  shift and go to state 15
    print_st                       shift and go to state 16
    use_st                         shift and go to state 17
    comment                        shift and go to state 18
    my                             shift and go to state 19

state 6

    (19) body -> statement_list .
    (22) statement_list -> statement_list . statement
    (46) statement -> . var_dec
    (47) statement -> . function_dec
    (48) statement -> . constructor
    (49) statement -> . object_creation
    (50) statement -> . obj_func_call
    (51) statement -> . print_st
    (52) statement -> . use_st
    (53) statement -> . comment
    (58) var_dec -> . my NAME ASSIGNOP SHIFT SEMI
    (59) var_dec -> . my NAME ASSIGNOP term SEMI
    (57) function_dec -> . SUB NAME block
    (3) constructor -> . SUB NEW braces_left constructor_body braces_right
    (1) object_creation -> . NAME ASSIGNOP NAME DEREF NEW PARANTHESIS_L arg_list PARANTHESIS_R SEMI
    (6) obj_func_call -> . NAME DEREF NAME PARANTHESIS_L arg_list PARANTHESIS_R SEMI
    (2) print_st -> . PRINT arg_list SEMI
    (56) use_st -> . USE NAME SEMI
    (61) comment -> . COMMENT
    (24) my -> . MY
    (25) my -> . empty
    (60) empty -> .

  ! shift/reduce conflict for NAME resolved as shift
    $end            reduce using rule 19 (body -> statement_list .)
    BRACES_RIGHT    reduce using rule 19 (body -> statement_list .)
    SUB             shift and go to state 20
    NAME            shift and go to state 9
    PRINT           shift and go to state 21
    USE             shift and go to state 22
    COMMENT         shift and go to state 23
    MY              shift and go to state 24

  ! NAME            [ reduce using rule 60 (empty -> .) ]

    statement                      shift and go to state 26
    var_dec                        shift and go to state 11
    function_dec                   shift and go to state 12
    constructor                    shift and go to state 13
    object_creation                shift and go to state 14
    obj_func_call                  shift and go to state 15
    print_st                       shift and go to state 16
    use_st                         shift and go to state 17
    comment                        shift and go to state 18
    my                             shift and go to state 19
    empty                          shift and go to state 27

state 7

    (20) body -> empty .
    (25) my -> empty .

    $end            reduce using rule 20 (body -> empty .)
    BRACES_RIGHT    reduce using rule 20 (body -> empty .)
    NAME            reduce using rule 25 (my -> empty .)


state 8

    (55) package_dec -> PACKAGE . NAME SEMI

    NAME            shift and go to state 28


state 9

    (1) object_creation -> NAME . ASSIGNOP NAME DEREF NEW PARANTHESIS_L arg_list PARANTHESIS_R SEMI
    (6) obj_func_call -> NAME . DEREF NAME PARANTHESIS_L arg_list PARANTHESIS_R SEMI

    ASSIGNOP        shift and go to state 29
    DEREF           shift and go to state 30


state 10

    (21) statement_list -> statement .

    SUB             reduce using rule 21 (statement_list -> statement .)
    NAME            reduce using rule 21 (statement_list -> statement .)
    PRINT           reduce using rule 21 (statement_list -> statement .)
    USE             reduce using rule 21 (statement_list -> statement .)
    COMMENT         reduce using rule 21 (statement_list -> statement .)
    MY              reduce using rule 21 (statement_list -> statement .)
    $end            reduce using rule 21 (statement_list -> statement .)
    BRACES_RIGHT    reduce using rule 21 (statement_list -> statement .)


state 11

    (46) statement -> var_dec .

    SUB             reduce using rule 46 (statement -> var_dec .)
    NAME            reduce using rule 46 (statement -> var_dec .)
    PRINT           reduce using rule 46 (statement -> var_dec .)
    USE             reduce using rule 46 (statement -> var_dec .)
    COMMENT         reduce using rule 46 (statement -> var_dec .)
    MY              reduce using rule 46 (statement -> var_dec .)
    $end            reduce using rule 46 (statement -> var_dec .)
    BRACES_RIGHT    reduce using rule 46 (statement -> var_dec .)


state 12

    (47) statement -> function_dec .

    SUB             reduce using rule 47 (statement -> function_dec .)
    NAME            reduce using rule 47 (statement -> function_dec .)
    PRINT           reduce using rule 47 (statement -> function_dec .)
    USE             reduce using rule 47 (statement -> function_dec .)
    COMMENT         reduce using rule 47 (statement -> function_dec .)
    MY              reduce using rule 47 (statement -> function_dec .)
    $end            reduce using rule 47 (statement -> function_dec .)
    BRACES_RIGHT    reduce using rule 47 (statement -> function_dec .)


state 13

    (48) statement -> constructor .

    SUB             reduce using rule 48 (statement -> constructor .)
    NAME            reduce using rule 48 (statement -> constructor .)
    PRINT           reduce using rule 48 (statement -> constructor .)
    USE             reduce using rule 48 (statement -> constructor .)
    COMMENT         reduce using rule 48 (statement -> constructor .)
    MY              reduce using rule 48 (statement -> constructor .)
    $end            reduce using rule 48 (statement -> constructor .)
    BRACES_RIGHT    reduce using rule 48 (statement -> constructor .)


state 14

    (49) statement -> object_creation .

    SUB             reduce using rule 49 (statement -> object_creation .)
    NAME            reduce using rule 49 (statement -> object_creation .)
    PRINT           reduce using rule 49 (statement -> object_creation .)
    USE             reduce using rule 49 (statement -> object_creation .)
    COMMENT         reduce using rule 49 (statement -> object_creation .)
    MY              reduce using rule 49 (statement -> object_creation .)
    $end            reduce using rule 49 (statement -> object_creation .)
    BRACES_RIGHT    reduce using rule 49 (statement -> object_creation .)


state 15

    (50) statement -> obj_func_call .

    SUB             reduce using rule 50 (statement -> obj_func_call .)
    NAME            reduce using rule 50 (statement -> obj_func_call .)
    PRINT           reduce using rule 50 (statement -> obj_func_call .)
    USE             reduce using rule 50 (statement -> obj_func_call .)
    COMMENT         reduce using rule 50 (statement -> obj_func_call .)
    MY              reduce using rule 50 (statement -> obj_func_call .)
    $end            reduce using rule 50 (statement -> obj_func_call .)
    BRACES_RIGHT    reduce using rule 50 (statement -> obj_func_call .)


state 16

    (51) statement -> print_st .

    SUB             reduce using rule 51 (statement -> print_st .)
    NAME            reduce using rule 51 (statement -> print_st .)
    PRINT           reduce using rule 51 (statement -> print_st .)
    USE             reduce using rule 51 (statement -> print_st .)
    COMMENT         reduce using rule 51 (statement -> print_st .)
    MY              reduce using rule 51 (statement -> print_st .)
    $end            reduce using rule 51 (statement -> print_st .)
    BRACES_RIGHT    reduce using rule 51 (statement -> print_st .)


state 17

    (52) statement -> use_st .

    SUB             reduce using rule 52 (statement -> use_st .)
    NAME            reduce using rule 52 (statement -> use_st .)
    PRINT           reduce using rule 52 (statement -> use_st .)
    USE             reduce using rule 52 (statement -> use_st .)
    COMMENT         reduce using rule 52 (statement -> use_st .)
    MY              reduce using rule 52 (statement -> use_st .)
    $end            reduce using rule 52 (statement -> use_st .)
    BRACES_RIGHT    reduce using rule 52 (statement -> use_st .)


state 18

    (53) statement -> comment .

    SUB             reduce using rule 53 (statement -> comment .)
    NAME            reduce using rule 53 (statement -> comment .)
    PRINT           reduce using rule 53 (statement -> comment .)
    USE             reduce using rule 53 (statement -> comment .)
    COMMENT         reduce using rule 53 (statement -> comment .)
    MY              reduce using rule 53 (statement -> comment .)
    $end            reduce using rule 53 (statement -> comment .)
    BRACES_RIGHT    reduce using rule 53 (statement -> comment .)


state 19

    (58) var_dec -> my . NAME ASSIGNOP SHIFT SEMI
    (59) var_dec -> my . NAME ASSIGNOP term SEMI

    NAME            shift and go to state 31


state 20

    (57) function_dec -> SUB . NAME block
    (3) constructor -> SUB . NEW braces_left constructor_body braces_right

    NAME            shift and go to state 32
    NEW             shift and go to state 33


state 21

    (2) print_st -> PRINT . arg_list SEMI
    (4) arg_list -> . arg
    (5) arg_list -> . arg_list COMMA arg
    (8) arg -> . term
    (9) arg -> . empty
    (71) term -> . termbinop
    (72) term -> . termunop
    (73) term -> . PARANTHESIS_L term PARANTHESIS_R
    (74) term -> . NAME
    (75) term -> . NUMBER
    (76) term -> . STRING
    (77) term -> . var_deref
    (78) term -> . Q BRACES_LEFT NAME BRACES_RIGHT
    (79) term -> . QQ BRACES_LEFT NAME BRACES_RIGHT
    (80) term -> . QX BRACES_LEFT NAME BRACES_RIGHT
    (60) empty -> .
    (27) termbinop -> . term POWOP term
    (28) termbinop -> . term MULOP term
    (29) termbinop -> . term ADDOP term
    (30) termbinop -> . term SHIFTOP term
    (31) termbinop -> . term RELOP term
    (32) termbinop -> . term EQOP term
    (33) termbinop -> . term BITANDOP term
    (34) termbinop -> . term BITOROP term
    (35) termbinop -> . term DOTDOT term
    (36) termbinop -> . term ANDAND term
    (37) termbinop -> . term OROR term
    (38) termbinop -> . term DORDOR term
    (39) termbinop -> . term MATCHOP term
    (40) termbinop -> . term WAND term
    (41) termbinop -> . term WOR term
    (42) termbinop -> . term WXOR term
    (62) termunop -> . ADDOP term
    (63) termunop -> . ! term
    (64) termunop -> . ~ term
    (65) termunop -> . term INCREMENT
    (66) termunop -> . term DECREMENT
    (67) termunop -> . term DEREF
    (68) termunop -> . INCREMENT term
    (69) termunop -> . DECREMENT term
    (70) termunop -> . WNOT term
    (18) var_deref -> . NAME DEREF BRACES_LEFT NAME BRACES_RIGHT

    PARANTHESIS_L   shift and go to state 40
    NAME            shift and go to state 41
    NUMBER          shift and go to state 42
    STRING          shift and go to state 43
    Q               shift and go to state 45
    QQ              shift and go to state 46
    QX              shift and go to state 47
    SEMI            reduce using rule 60 (empty -> .)
    COMMA           reduce using rule 60 (empty -> .)
    ADDOP           shift and go to state 48
    !               shift and go to state 49
    ~               shift and go to state 50
    INCREMENT       shift and go to state 51
    DECREMENT       shift and go to state 52
    WNOT            shift and go to state 53

    arg_list                       shift and go to state 34
    arg                            shift and go to state 35
    term                           shift and go to state 36
    empty                          shift and go to state 37
    termbinop                      shift and go to state 38
    termunop                       shift and go to state 39
    var_deref                      shift and go to state 44

state 22

    (56) use_st -> USE . NAME SEMI

    NAME            shift and go to state 54


state 23

    (61) comment -> COMMENT .

    SUB             reduce using rule 61 (comment -> COMMENT .)
    NAME            reduce using rule 61 (comment -> COMMENT .)
    PRINT           reduce using rule 61 (comment -> COMMENT .)
    USE             reduce using rule 61 (comment -> COMMENT .)
    COMMENT         reduce using rule 61 (comment -> COMMENT .)
    MY              reduce using rule 61 (comment -> COMMENT .)
    $end            reduce using rule 61 (comment -> COMMENT .)
    BRACES_RIGHT    reduce using rule 61 (comment -> COMMENT .)


state 24

    (24) my -> MY .

    NAME            reduce using rule 24 (my -> MY .)


state 25

    (54) package -> package_dec body .

    $end            reduce using rule 54 (package -> package_dec body .)


state 26

    (22) statement_list -> statement_list statement .

    SUB             reduce using rule 22 (statement_list -> statement_list statement .)
    NAME            reduce using rule 22 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 22 (statement_list -> statement_list statement .)
    USE             reduce using rule 22 (statement_list -> statement_list statement .)
    COMMENT         reduce using rule 22 (statement_list -> statement_list statement .)
    MY              reduce using rule 22 (statement_list -> statement_list statement .)
    $end            reduce using rule 22 (statement_list -> statement_list statement .)
    BRACES_RIGHT    reduce using rule 22 (statement_list -> statement_list statement .)


state 27

    (25) my -> empty .

    NAME            reduce using rule 25 (my -> empty .)


state 28

    (55) package_dec -> PACKAGE NAME . SEMI

    SEMI            shift and go to state 55


state 29

    (1) object_creation -> NAME ASSIGNOP . NAME DEREF NEW PARANTHESIS_L arg_list PARANTHESIS_R SEMI

    NAME            shift and go to state 56


state 30

    (6) obj_func_call -> NAME DEREF . NAME PARANTHESIS_L arg_list PARANTHESIS_R SEMI

    NAME            shift and go to state 57


state 31

    (58) var_dec -> my NAME . ASSIGNOP SHIFT SEMI
    (59) var_dec -> my NAME . ASSIGNOP term SEMI

    ASSIGNOP        shift and go to state 58


state 32

    (57) function_dec -> SUB NAME . block
    (43) block -> . braces_left body braces_right
    (44) braces_left -> . BRACES_LEFT

    BRACES_LEFT     shift and go to state 61

    block                          shift and go to state 59
    braces_left                    shift and go to state 60

state 33

    (3) constructor -> SUB NEW . braces_left constructor_body braces_right
    (44) braces_left -> . BRACES_LEFT

    BRACES_LEFT     shift and go to state 61

    braces_left                    shift and go to state 62

state 34

    (2) print_st -> PRINT arg_list . SEMI
    (5) arg_list -> arg_list . COMMA arg

    SEMI            shift and go to state 63
    COMMA           shift and go to state 64


state 35

    (4) arg_list -> arg .

    SEMI            reduce using rule 4 (arg_list -> arg .)
    COMMA           reduce using rule 4 (arg_list -> arg .)
    PARANTHESIS_R   reduce using rule 4 (arg_list -> arg .)


state 36

    (8) arg -> term .
    (27) termbinop -> term . POWOP term
    (28) termbinop -> term . MULOP term
    (29) termbinop -> term . ADDOP term
    (30) termbinop -> term . SHIFTOP term
    (31) termbinop -> term . RELOP term
    (32) termbinop -> term . EQOP term
    (33) termbinop -> term . BITANDOP term
    (34) termbinop -> term . BITOROP term
    (35) termbinop -> term . DOTDOT term
    (36) termbinop -> term . ANDAND term
    (37) termbinop -> term . OROR term
    (38) termbinop -> term . DORDOR term
    (39) termbinop -> term . MATCHOP term
    (40) termbinop -> term . WAND term
    (41) termbinop -> term . WOR term
    (42) termbinop -> term . WXOR term
    (65) termunop -> term . INCREMENT
    (66) termunop -> term . DECREMENT
    (67) termunop -> term . DEREF

    SEMI            reduce using rule 8 (arg -> term .)
    COMMA           reduce using rule 8 (arg -> term .)
    PARANTHESIS_R   reduce using rule 8 (arg -> term .)
    POWOP           shift and go to state 65
    MULOP           shift and go to state 66
    ADDOP           shift and go to state 67
    SHIFTOP         shift and go to state 68
    RELOP           shift and go to state 69
    EQOP            shift and go to state 70
    BITANDOP        shift and go to state 71
    BITOROP         shift and go to state 72
    DOTDOT          shift and go to state 73
    ANDAND          shift and go to state 74
    OROR            shift and go to state 75
    DORDOR          shift and go to state 76
    MATCHOP         shift and go to state 77
    WAND            shift and go to state 78
    WOR             shift and go to state 79
    WXOR            shift and go to state 80
    INCREMENT       shift and go to state 81
    DECREMENT       shift and go to state 82
    DEREF           shift and go to state 83


state 37

    (9) arg -> empty .

    SEMI            reduce using rule 9 (arg -> empty .)
    COMMA           reduce using rule 9 (arg -> empty .)
    PARANTHESIS_R   reduce using rule 9 (arg -> empty .)


state 38

    (71) term -> termbinop .

    POWOP           reduce using rule 71 (term -> termbinop .)
    MULOP           reduce using rule 71 (term -> termbinop .)
    ADDOP           reduce using rule 71 (term -> termbinop .)
    SHIFTOP         reduce using rule 71 (term -> termbinop .)
    RELOP           reduce using rule 71 (term -> termbinop .)
    EQOP            reduce using rule 71 (term -> termbinop .)
    BITANDOP        reduce using rule 71 (term -> termbinop .)
    BITOROP         reduce using rule 71 (term -> termbinop .)
    DOTDOT          reduce using rule 71 (term -> termbinop .)
    ANDAND          reduce using rule 71 (term -> termbinop .)
    OROR            reduce using rule 71 (term -> termbinop .)
    DORDOR          reduce using rule 71 (term -> termbinop .)
    MATCHOP         reduce using rule 71 (term -> termbinop .)
    WAND            reduce using rule 71 (term -> termbinop .)
    WOR             reduce using rule 71 (term -> termbinop .)
    WXOR            reduce using rule 71 (term -> termbinop .)
    INCREMENT       reduce using rule 71 (term -> termbinop .)
    DECREMENT       reduce using rule 71 (term -> termbinop .)
    DEREF           reduce using rule 71 (term -> termbinop .)
    SEMI            reduce using rule 71 (term -> termbinop .)
    COMMA           reduce using rule 71 (term -> termbinop .)
    PARANTHESIS_R   reduce using rule 71 (term -> termbinop .)
    BRACES_RIGHT    reduce using rule 71 (term -> termbinop .)


state 39

    (72) term -> termunop .

    POWOP           reduce using rule 72 (term -> termunop .)
    MULOP           reduce using rule 72 (term -> termunop .)
    ADDOP           reduce using rule 72 (term -> termunop .)
    SHIFTOP         reduce using rule 72 (term -> termunop .)
    RELOP           reduce using rule 72 (term -> termunop .)
    EQOP            reduce using rule 72 (term -> termunop .)
    BITANDOP        reduce using rule 72 (term -> termunop .)
    BITOROP         reduce using rule 72 (term -> termunop .)
    DOTDOT          reduce using rule 72 (term -> termunop .)
    ANDAND          reduce using rule 72 (term -> termunop .)
    OROR            reduce using rule 72 (term -> termunop .)
    DORDOR          reduce using rule 72 (term -> termunop .)
    MATCHOP         reduce using rule 72 (term -> termunop .)
    WAND            reduce using rule 72 (term -> termunop .)
    WOR             reduce using rule 72 (term -> termunop .)
    WXOR            reduce using rule 72 (term -> termunop .)
    INCREMENT       reduce using rule 72 (term -> termunop .)
    DECREMENT       reduce using rule 72 (term -> termunop .)
    DEREF           reduce using rule 72 (term -> termunop .)
    SEMI            reduce using rule 72 (term -> termunop .)
    COMMA           reduce using rule 72 (term -> termunop .)
    PARANTHESIS_R   reduce using rule 72 (term -> termunop .)
    BRACES_RIGHT    reduce using rule 72 (term -> termunop .)


state 40

    (73) term -> PARANTHESIS_L . term PARANTHESIS_R
    (71) term -> . termbinop
    (72) term -> . termunop
    (73) term -> . PARANTHESIS_L term PARANTHESIS_R
    (74) term -> . NAME
    (75) term -> . NUMBER
    (76) term -> . STRING
    (77) term -> . var_deref
    (78) term -> . Q BRACES_LEFT NAME BRACES_RIGHT
    (79) term -> . QQ BRACES_LEFT NAME BRACES_RIGHT
    (80) term -> . QX BRACES_LEFT NAME BRACES_RIGHT
    (27) termbinop -> . term POWOP term
    (28) termbinop -> . term MULOP term
    (29) termbinop -> . term ADDOP term
    (30) termbinop -> . term SHIFTOP term
    (31) termbinop -> . term RELOP term
    (32) termbinop -> . term EQOP term
    (33) termbinop -> . term BITANDOP term
    (34) termbinop -> . term BITOROP term
    (35) termbinop -> . term DOTDOT term
    (36) termbinop -> . term ANDAND term
    (37) termbinop -> . term OROR term
    (38) termbinop -> . term DORDOR term
    (39) termbinop -> . term MATCHOP term
    (40) termbinop -> . term WAND term
    (41) termbinop -> . term WOR term
    (42) termbinop -> . term WXOR term
    (62) termunop -> . ADDOP term
    (63) termunop -> . ! term
    (64) termunop -> . ~ term
    (65) termunop -> . term INCREMENT
    (66) termunop -> . term DECREMENT
    (67) termunop -> . term DEREF
    (68) termunop -> . INCREMENT term
    (69) termunop -> . DECREMENT term
    (70) termunop -> . WNOT term
    (18) var_deref -> . NAME DEREF BRACES_LEFT NAME BRACES_RIGHT

    PARANTHESIS_L   shift and go to state 40
    NAME            shift and go to state 41
    NUMBER          shift and go to state 42
    STRING          shift and go to state 43
    Q               shift and go to state 45
    QQ              shift and go to state 46
    QX              shift and go to state 47
    ADDOP           shift and go to state 48
    !               shift and go to state 49
    ~               shift and go to state 50
    INCREMENT       shift and go to state 51
    DECREMENT       shift and go to state 52
    WNOT            shift and go to state 53

    term                           shift and go to state 84
    termbinop                      shift and go to state 38
    termunop                       shift and go to state 39
    var_deref                      shift and go to state 44

state 41

    (74) term -> NAME .
    (18) var_deref -> NAME . DEREF BRACES_LEFT NAME BRACES_RIGHT

  ! shift/reduce conflict for DEREF resolved as shift
    POWOP           reduce using rule 74 (term -> NAME .)
    MULOP           reduce using rule 74 (term -> NAME .)
    ADDOP           reduce using rule 74 (term -> NAME .)
    SHIFTOP         reduce using rule 74 (term -> NAME .)
    RELOP           reduce using rule 74 (term -> NAME .)
    EQOP            reduce using rule 74 (term -> NAME .)
    BITANDOP        reduce using rule 74 (term -> NAME .)
    BITOROP         reduce using rule 74 (term -> NAME .)
    DOTDOT          reduce using rule 74 (term -> NAME .)
    ANDAND          reduce using rule 74 (term -> NAME .)
    OROR            reduce using rule 74 (term -> NAME .)
    DORDOR          reduce using rule 74 (term -> NAME .)
    MATCHOP         reduce using rule 74 (term -> NAME .)
    WAND            reduce using rule 74 (term -> NAME .)
    WOR             reduce using rule 74 (term -> NAME .)
    WXOR            reduce using rule 74 (term -> NAME .)
    INCREMENT       reduce using rule 74 (term -> NAME .)
    DECREMENT       reduce using rule 74 (term -> NAME .)
    SEMI            reduce using rule 74 (term -> NAME .)
    COMMA           reduce using rule 74 (term -> NAME .)
    PARANTHESIS_R   reduce using rule 74 (term -> NAME .)
    BRACES_RIGHT    reduce using rule 74 (term -> NAME .)
    DEREF           shift and go to state 85

  ! DEREF           [ reduce using rule 74 (term -> NAME .) ]


state 42

    (75) term -> NUMBER .
